reformulation du html
just une idee

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
         <div class="oreille-droit"></div>
       </div>
 
+      <div class="body-owl"></div>
+
       <div class="owl-bottom">
 
         <div class="ventre"></div>
