--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
   <main>
     <div class="main-owl">
+
       <div class="owl-top">
         <div class="oeil-gauche">
           <div class="pupille"></div>
@@ -20,28 +21,27 @@
         <div class="oeil-droit">
           <div class="pupille"></div>
         </div>
-        <div class="nez"></div>
         <div class="oreille-gauche"></div>
         <div class="oreille-droit"></div>
       </div>
 
-      <div class="body-owl"></div>
+      <div class="owl-middle">
+          <div class="bouche"></div>
+      </div>
 
       <div class="owl-bottom">
-
-        <div class="ventre"></div>
         <div class="pied-gauche">
           <div class="orteille-1"></div>
           <div class="orteille-2"></div>
           <div class="orteille-3"></div>
         </div>
-
         <div class="pied-droit">
           <div class="orteille-1"></div>
           <div class="orteille-2"></div>
           <div class="orteille-3"></div>
         </div>
       </div>
+
     </div>
   </main>
 </body>
